@@ -1,5 +1,17 @@
 New entries should be added at the top
 
+2005-05-10 Extended python agg wrapper and started implementing backend_agg2,
+           an agg renderer based on the python wrapper.  This will be
+           more flexible and easier to extend than the current
+           backend_agg.  See also examples/agg_test.py - JDH
+
+2005-05-09 Added Marcin's no legend patch to exclude lines from the
+           autolegend builder
+
+           plot(x, y, label='nolegend')
+
+2005-05-05 Upgraded to agg23
+
 2005-05-05 Added newscalarformatter_demo.py to examples. -DSD 
 
 2005-05-04 Added NewScalarFormatter. Improved formatting of ticklabels, 
